[tool.poetry]
name = "msrt-wrapper"
version = "0.1.0"
description = ""
authors = ["Mehdi Ghanimifard"]
packages = [{ include = "dummy"}]

[tool.poetry.dependencies]
python = "^3.9"
"ruamel.yaml" = "*"
regex = "^2023.10.3"

[tool.poetry.dev-dependencies]

[tool.poetry.build]
generate-setup-file = false 
script = "build.py"

[build-system]
requires = ["poetry-core>=1.0.0", "pip", "build", "ruamel.yaml"]
build-backend = "poetry.core.masonry.api"
